Upgrade snowball to 2d2e312df56f2ede014a4ffb3e91e6dea43c24be (#15505)
* upgrade snowball to 2d2e312df56f2ede014a4ffb3e91e6dea43c24be

* Adding changelog and license checker patch

* Minor tweaks to make checks pass.

* Add PolishSnowballAnalyzer to stempel package. This isn't ideal but we can't have split packages between modules and stopwords live with stempel module anyway.

* Moved changes entry to 11.0.

---------

Co-authored-by: Justas Sakalauskas <justas.sakalauskas@pigu.lt>
Co-authored-by: Dawid Weiss <dawid.weiss@carrotsearch.com>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -53,6 +53,10 @@ API Changes
 
 New Features
 ---------------------
+
+* GITHUB#15505: Upgrade snowball to 2d2e312df56f2ede014a4ffb3e91e6dea43c24be. New stemmer: PolishStemmer (and
+  PolishSnowballAnalyzer in the stempel package) (Justas Sakalauskas, Dawid Weiss)
+
 * GITHUB#14097: Binary partitioning merge policy over float-valued vector field. (Mike Sokolov)
 
 * GITHUB#14178: Add a Faiss-based vector format in the sandbox module. (Kaival Parikh)
