--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -59,7 +59,7 @@ New Features
 
 * GITHUB#14792: Introduced OffHeapQuantizedFloatVectorValues class to access float vectors when only quantized byte vectors are available in the index. (Pulkit Gupta)
 
-* GITHUB#15508: Use native dot product in Lucene. (Ankur Goel, Shubham Chaudhary)
+* GITHUB#15508: Use native dot product in Lucene. (Ankur Goel, Shubham Chaudhary, Dawid Weiss)
 
 Improvements
 ---------------------
