Modify change log
Signed-off-by: Binlong Gao <gbinlong@amazon.com>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -83,7 +83,7 @@ Improvements
 
 * GITHUB#15453: Avoid unnecessary sorting and instantiations in readMapOfStrings. (Benjamin Lerer)
 
-* GITHUB: Introduce AllGroupsCollectorManager to parallelize search when using AllGroupsCollector. (Binlong Gao)
+* GITHUB#15557: Introduce AllGroupsCollectorManager to parallelize search when using AllGroupsCollector. (Binlong Gao)
 
 Optimizations
 ---------------------
