Expose MergeRateLimiter in runOnMergeFinished hook (#15507)
* Expose MergeRateLimiter in runOnMergeFinished hook

Changes runOnMergeFinished method signature in ConcurrentMergeScheduler
to provide access to OneMerge and MergeRateLimiter parameters. This
allows applications to monitor merge performance metrics like pause time,
throttling behavior, and throughput.

- Changed runOnMergeFinished from package-private to protected
- Added OneMerge merge parameter for merge context
- Added MergeRateLimiter rateLimiter parameter for metrics access

This enables custom monitoring and observability for merge operations
without requiring internal API access.

* Fomat code

* Include Javadocs for runOnMergeFinished

* Add @lucene.experimental to the API javadocs

* Add an entry to CHANGES.txt

---------

Co-authored-by: Zihan Xu <zanorz@amazon.com>
Co-authored-by: Michael McCandless <mikemccand@apache.org>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -39,6 +39,12 @@ API Changes
 
 * GITHUB#15559: Deprecate some public FuzzySet methods ahead of removing them in the future (Greg Miller)
 
+* GITHUB#15507: Expose MergeRateLimiter in ConcurrentMergeScheduler.runOnMergeFinished hook.
+  The runOnMergeFinished method signature now includes OneMerge and MergeRateLimiter parameters,
+  enabling applications to monitor merge performance metrics like pause time, throttling behavior,
+  and throughput. This provides visibility into Lucene's merge backpressure mechanisms that can
+  stall indexing when merge debt accumulates. (Zihan Xu)
+
 New Features
 ---------------------
 * GITHUB#15328: VectorSimilarityFunction.getValues() now implements doubleVal allowing its
