Ensure that FilterXxx properly delegate to the decorated instances (#15469)
* Ensure that Filter classes properly delegate to the decorated instances

The patch introduce a new assertion method in LuceneTestCase that
verify that a given base decorator class (Filter) properly delegate
all methods calls to the wrapped instance. The patch add the
missing delegation methods.

Closes #15452

* Fix delegation from super.slice to in.slice in FilterIndexInput.

* Revert API change and delegate getName properly.

* Simplify the code slightly. Throw RuntimeException on clone() calls on FilterIndexInput subclasses as it's a mistake if they're cloned without the delegate also cloned.

* Add explicit comment where count cannot be approximated in filter subclasses.

* Add a clarification to BooleanScorerSupplier.advanceShallow.

---------

Co-authored-by: Dawid Weiss <dawid.weiss@carrotsearch.com>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -56,6 +56,8 @@ API Changes
 
 * GITHUB#14615 : Remove unnecessary public methods in FuzzySet (Greg Miller)
 
+* GITHUB#15452: Ensure that Filter classes properly delegate to the decorated instances (Benjamin Lerer)
+
 * GITHUB#15507: Expose MergeRateLimiter in ConcurrentMergeScheduler.runOnMergeFinished hook.
   The runOnMergeFinished method signature now includes OneMerge and MergeRateLimiter parameters,
   enabling applications to monitor merge performance metrics like pause time, throttling behavior,
