Allow a DataAccessHint to be passed during the construction of a Lucene99FlatVectorsReader (#15569)
This is a small change to allow the DataAccessHint to be passed during the construction of a Lucene99FlatVectorsReader. The reader if often used in conjunction with a graph, where random access is appropriate. However, the reader can be used without a graph, when implementing a so-called "flat" index, where SEQUENTIAL would likely be more appropriate.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -45,6 +45,9 @@ API Changes
   and throughput. This provides visibility into Lucene's merge backpressure mechanisms that can
   stall indexing when merge debt accumulates. (Zihan Xu)
 
+* GITHUB#15569: Allow a DataAccessHint to be passed during the construction of Lucene99FlatVectorsReader
+  (Chris Hegarty)
+
 New Features
 ---------------------
 * GITHUB#15328: VectorSimilarityFunction.getValues() now implements doubleVal allowing its
