Minor javadoc clarification that HasIndexSlice::getSlice can return null (#15581)
This commit adds a minor clarification to HasIndexSlice::getSlice, documenting that it may return null if the index input is not available. This is just a clarification of existing behaviour (rather than a change in behaviour), and the usage sites already cover the null check.

My motivation for this change is to make it more straightforward and clear that we can write filter wrapper delegates on top of KnnVectorValues - the filter can just implement HasIndexSlice and return null, rather than writing two different filter implementations.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -48,6 +48,9 @@ API Changes
 * GITHUB#15569: Allow a DataAccessHint to be passed during the construction of Lucene99FlatVectorsReader
   (Chris Hegarty)
 
+* GITHUB#15581: Minor javadoc clarification that HasIndexSlice::getSlice can return null
+  (Chris Hegarty)
+
 New Features
 ---------------------
 * GITHUB#15328: VectorSimilarityFunction.getValues() now implements doubleVal allowing its
