Add `count()` to `FilterWeight` (#15510)

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -205,6 +205,8 @@ API Changes
 * GITHUB#15581: Minor javadoc clarification that HasIndexSlice::getSlice can return null
   (Chris Hegarty)
 
+* GITHUB#15502: Add `count()` method to `FilterWeight`  (Prudhvi Godithi)
+
 New Features
 ---------------------
 * GITHUB#15328: VectorSimilarityFunction.getValues() now implements doubleVal allowing its
