SegmentTermsEnumFrame: avoid unnecessary array allocations that waste memory (#15618)
* SegmentTermsEnumFrame: avoid unnecessary array allocations that waste memory

* Add changes entry.

---------

Co-authored-by: Dawid Weiss <dawid.weiss@carrotsearch.com>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -326,6 +326,8 @@ Optimizations
 
 * GITHUB#15592: Optimize DocIdSetIteratorAcceptDocs#cost. (Shubham Chaudhary)
 
+* GITHUB#15618: SegmentTermsEnumFrame: avoid unnecessary array allocations that waste memory (Misha Dmitriev)
+
 Bug Fixes
 ---------------------
 * GITHUB#14161: PointInSetQuery's constructor now throws IllegalArgumentException
