Clones of MMapDirectory's IndexInput (MemorySegmentIndexInput) now share one counter for throttling madvise calls for dynamic prefetch (#15585)
* Added sharedPrefetchCounter

* Minor

* Added AtomicInteger and CHANGES.txt entry.

* Removed SharedPrefetchCounter completely and replaced with AtomicInteger.

* Empty space

* Replaced incrementAndGet() with getAndIncrement()

---------

Co-authored-by: shubharm <shubharm@amazon.com>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -167,6 +167,8 @@ Optimizations
 
 * GITHUB#15618: SegmentTermsEnumFrame: avoid unnecessary array allocations that waste memory (Misha Dmitriev)
 
+* GITHUB#15585: Added shared prefetch counter to maintain count across clones and slices of MemorySegmentIndexInput. (Shubham Sharma)
+
 Bug Fixes
 ---------------------
 * GITHUB#14161: PointInSetQuery's constructor now throws IllegalArgumentException
