build: integrate prek (#15629)
Integrates prek as a repository scanner and pre-commit tool. It has some built-in 
rust checks that run across the repository, and can also integrate external tools.

External tools are managed as pypi dependencies with uv, just explicitly instead 
of using prek's built-in uv support. You need uv either way.

shellcheck, actionlint, zizmor, ruff, rumdl, and ast-grep tools are initially integrated.
We can migrate other checks from the gradle build here with follow-up commits.

The CI is reorganized to run this "quick check" before any of the heavy java jobs. 
Current job in the worst case (cache miss) runs in less than a minute: so it does 
not slow down feedback to the user, but saves a lot of CI minutes. good task for 
ubuntu slim runner.

To try the functionality out locally:

You need uv package manager: https://docs.astral.sh/uv/getting-started/installation/
You can then change some code and try out a precommit-run with `uvx prek`
To do this automatically as git-hook, use `uvx prek install`.

Locally, the checks are fast, since generally only the files you touched are being
passed to the checker. So the pre-commit git hook is actually not annoying (< 1s).

The checker is configured with some autofix support. All of the current "Check" 
steps run in parallel, then the "Fix" steps run sequentially in the order they are 
defined in the `.pre-commit-config.yml` file. 

`Fix` solution is always preferred to make it easier on the user, the individual
steps will use multiple cores anyway.

Fixes will still "fail" the `git commit`, but they'll make the changes for you locally. 
You just need to review and `git add` the fixes made, then `git commit` again.

Closes #15626

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -145,6 +145,12 @@ Build
 * GITHUB#14808: Add support for validating sources using ast-grep tool rules #14808
   (Robert Muir, Dawid Weiss)
 
+* GITHUB#15629: Introduce prek for fast pre-commit/repository checks.
+  Markdown files are now linted with local broken-link detection.
+  Python and Shell scripts are now linted system-wide.
+  Install with `uvx prek install`
+  For more see help/precommit.txt or `./gradlew helpPrecommit` (Robert Muir)
+
 Other
 ---------------------
 
